test_regress/t/t_udp_param_bad.out
%Error: t/t_udp_param_bad.v:12:15: syntax error, unexpected '#', expecting ';'
   12 | primitive udp #(
      |               ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_udp_param_bad.v:14:1: syntax error, unexpected ')', expecting ';'
   14 | ) (o, a);
      | ^
%Error: Exiting due to
